--- a/src/components/form/styles.module.scss
+++ b/src/components/form/styles.module.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.form_container {
+.formContainer {
   padding: 1.5rem;
   border: 1px solid #dee2e6;
 
@@ -17,7 +17,7 @@
   }
 }
 
-.form_control {
+.formControl {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -58,13 +58,13 @@
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.btn_success {
+.btnSuccess {
   color: #fff;
   background-color: #198754;
   border-color: #198754;
 }
 
-.btn_primary {
+.btnPrimary {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
@@ -80,7 +80,11 @@
   }
 }
 
-.invalid_feedback {
+.formLabel {
+  margin-bottom: 0.5rem;
+}
+
+.invalidFeedback {
   display: none;
   width: 100%;
   margin-top: 0.25rem;
