--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,6 +1,8 @@
+@use "./grid.scss";
+
 .row {
   --bs-gutter-y: 1rem;
-  --bs-gutter-x: 1rem;
+  --bs-gutter-x: 1.5rem;
 
   display: flex;
   flex-wrap: wrap;
