--- a/src/pages/Root/styles.module.scss
+++ b/src/pages/Root/styles.module.scss
@@ -1,6 +1,11 @@
+.appWrapper {
+    display: flex;
+}
+
 .appMain {
     display: flex;
     flex-direction: column;
-    max-width: 100vw;
+    width: 100%;
     padding: 1.5rem;
+    background-color: #F5F6FA;
 }
