--- a/src/App.scss
+++ b/src/App.scss
@@ -50,3 +50,19 @@ label {
 a {
   text-decoration: none;
 }
+
+table {
+  caption-side: bottom;
+  border-collapse: collapse;
+}
+
+thead,
+tbody,
+tfoot,
+tr,
+td,
+th {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+}
